--- a/code/server/src/main/resources/application.properties
+++ b/code/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=parksystem
+
+# Configuração do DataSource
+spring.datasource.url=jdbc:postgresql://ep-broad-bird-a4kz4zta-pooler.us-east-1.aws.neon.tech:5432/verceldb
+spring.datasource.username=default
+spring.datasource.password=z8lc5vOdDbBL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuração do JPA/Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
