correção do bug de conexão com o banco de dados

--- a/code/server/src/main/resources/application.properties
+++ b/code/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=parksystem
+server.port=3002
 
 # Configuração do DataSource
 spring.datasource.url=jdbc:postgresql://ep-broad-bird-a4kz4zta-pooler.us-east-1.aws.neon.tech:5432/verceldb
@@ -10,3 +11,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+
+# Habilitar CORS globalmente (opcional)
+spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
